--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding//src/string/CompareString.java=UTF-8
 encoding//src/string/ConcatString.java=UTF-8
 encoding//src/string/ConvertIntToString.java=UTF-8
 encoding//src/string/LengthString.java=UTF-8
+encoding//src/string/Regex.java=UTF-8
 encoding//src/string/SubString.java=UTF-8
 encoding//src/string/TrimString.java=UTF-8
 encoding//src/string/UpperLowerString.java=UTF-8
